k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: furniture-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 649966626825.dkr.ecr.us-east-1.amazonaws.com/furniture-backend:IMAGE_TAG
          ports:
            - containerPort: 8000
